# wilton_video_handler

./: .gitmodules  CMakeLists.txt  README.md  check_version.js  detection_test.js  index.js  recognize_test.js
src/: api_usage.cpp  checker.cpp  checker.hpp  decoder.cpp  decoder.h  decoder.hpp  display.cpp  display.h  display.hpp  encoder.cpp  encoder.h  encoder.hpp  example.cpp  frame_keeper.cpp  frame_keeper.h  frame_keeper.hpp  marker_tracker.cpp  marker_tracker.hpp  photo.cpp  photo.h  photo.hpp  recognizer.cpp  recognizer.hpp  utils.cpp  utils.hpp  video_api.cpp  video_api.h  video_api.hpp  video_handler.cpp  video_logger.hpp
src/marker_drawer/: frame_to_bg.cpp  frame_to_bg.hpp  marker_drawer.cpp  marker_drawer.hpp  reverse_buffer.cpp  reverse_buffer.hpp  shader_class.cpp  shader_class.hpp
src/marker_drawer/resources/: test_fragment_shader.glsl  test_vertex_shader.glsl
